fix: overflow hidden

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,12 +22,8 @@
 * {
   box-sizing: border-box;
 }
-html,
-body {
-  height: 100%;
-}
-body {
-  margin: 0;
+html {
+  min-height: 100%;
   background:
     radial-gradient(
       1200px 700px at 10% -10%,
@@ -40,6 +36,10 @@ body {
       transparent 60%
     ),
     var(--bg);
+}
+body {
+  margin: 0;
+  min-height: 100%;
   color: var(--text);
   font:
     14px/1.4 ui-sans-serif,
@@ -52,7 +52,7 @@ body {
     Noto Sans,
     Apple Color Emoji,
     Segoe UI Emoji;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .btn {
